--- a/css/royalslider.css
+++ b/css/royalslider.css
@@ -237,6 +237,12 @@
 
 img.rsImg {
 	max-width: none;
+	box-shadow: 0 0px 2px 2px rgba(60, 25, 25, 0.65);
+	transition: 0.3s;
+}
+
+img.rsImg :hover {
+	box-shadow: 0 0px 8px 8px rgba(0,0,0,0.9);
 }
 
 .grab-cursor {
